# quad

./: flake.nix  fourmolu.yaml  quad.cabal
app/: Main.hs
src/: Agent.hs  Core.hs  Docker.hs  JobHandler.hs  Runner.hs  Server.hs  Socket.hs
src/JobHandler/: Memory.hs
test/: Main.hs
