cabal-version:      3.0
name:               quad
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             pchabros
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common language
    default-language: Haskell2010
    ghc-options:
        -Wall
        -- -Wno-name-shadowing

common dependencies
    build-depends:   
        base ^>=4.18.2.1,
        rio

common extensions
    default-extensions:
        BlockArguments
        DuplicateRecordFields
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        NamedFieldPuns
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings

library
    import:
        language,
        dependencies,
        extensions

    exposed-modules: 
        Core,
        Docker,
        Runner,
        Socket

    build-depends:   
        aeson,
        http-client,
        http-conduit,
        network,
        time

    hs-source-dirs: 
        src

executable quad
    import:
        language,
        dependencies,
        extensions

    main-is:
        Main.hs

    build-depends:
        quad

    hs-source-dirs:
        app

test-suite quad-test
    import:
        language,
        dependencies,
        extensions

    type:
        exitcode-stdio-1.0

    hs-source-dirs: 
        test

    main-is:       
        Main.hs

    build-depends:
        hspec,
        quad,
        typed-process
