cabal-version:      3.0
name:               quad
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             pchabros
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common language
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common dependencies
    build-depends:   
        base,
        rio,
        yaml

common extensions
    default-extensions:
        BlockArguments
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DuplicateRecordFields
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        NamedFieldPuns
        NoFieldSelectors
        NoImplicitPrelude
        OverloadedRecordDot
        OverloadedStrings
        StrictData

library
    import:
        language,
        dependencies,
        extensions

    exposed-modules: 
        Agent,
        Core,
        Docker,
        JobHandler,
        JobHandler.Memory,
        Runner,
        Server,
        Socket

    build-depends:   
        aeson,
        hslogger,
        http-client,
        http-conduit,
        http-types,
        network,
        scotty,
        serialise,
        stm,
        time

    hs-source-dirs: 
        src

executable quad
    import:
        language,
        dependencies,
        extensions

    main-is:
        Main.hs

    build-depends:
        quad

    hs-source-dirs:
        app

test-suite quad-test
    import:
        language,
        dependencies,
        extensions

    type:
        exitcode-stdio-1.0

    hs-source-dirs: 
        test

    main-is:       
        Main.hs

    build-depends:
        async,
        hspec,
        quad,
        typed-process
